<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:padding="16dp"
    android:clipToPadding="false"
    tools:context=".activities.LoginActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/back_btn"
        android:text="@string/back_btn_hint" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:includeFontPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_bold"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/back_btn"
        android:id="@+id/login_heading"
        android:text="@string/login_heading" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:includeFontPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_medium"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/login_heading"
        android:id="@+id/login_subtitle"
        android:text="@string/login_subtitle" />

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textColor="#ffffff"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/login_subtitle"
        android:maxHeight="50dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/email_hint"
        android:minHeight="50dp"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="12dp"
        android:inputType="textEmailAddress"
        android:id="@+id/enter_email" />

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:drawablePadding="12dp"
        android:drawableEnd="@drawable/eye_off"
        android:textColor="#ffffff"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/enter_email"
        android:maxHeight="50dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/password_hint"
        android:minHeight="50dp"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="12dp"
        android:inputType="textPassword"
        android:id="@+id/enter_password" />

    <FrameLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_password"
        android:id="@+id/login_btn_container">

        <com.google.android.material.button.MaterialButton
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:fontFamily="@font/poppins_medium"
            app:cornerRadius="16dp"
            app:elevation="10dp"
            android:id="@+id/login_btn"
            android:text="@string/login_btn_hint" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:id="@+id/loading_anim"
            android:visibility="gone"
            app:lottie_rawRes="@raw/loading" />

    </FrameLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/login_btn_container"
        android:id="@+id/dont_hv_ac"
        android:text="@string/dont_have_account" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dont_hv_ac"
        android:id="@+id/register_btn"
        android:text="@string/register_btn_hint"
        android:drawableEnd="@drawable/arrow_right" />

</androidx.constraintlayout.widget.ConstraintLayout>
