<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:padding="16dp"
    android:orientation="vertical"
    android:clipToPadding="false"
    tools:context=".activities.GetStartedActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:lottie_rawRes="@raw/couple"
        android:id="@+id/main_anim"
        android:layout_weight="1"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAppearance="?attr/textAppearanceDisplayMedium"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="#ffffff"
            android:layout_marginTop="16dp"
            android:id="@+id/app_name"
            android:text="@string/app_name" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_medium"
            android:textColor="#ffffff"
            android:id="@+id/tag_line"
            android:text="@string/tag_line" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadlineSmall"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_regular"
            android:textColor="#ffffff"
            android:layout_marginTop="16dp"
            android:id="@+id/sub_tag_line"
            android:text="@string/sub_tagline" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <com.google.android.material.button.MaterialButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:minHeight="50dp"
                app:cornerRadius="20dp"
                android:fontFamily="@font/poppins_medium"
                android:textAllCaps="false"
                style="@style/Widget.Material3.Button.TonalButton"
                android:id="@+id/get_started_btn"
                android:text="@string/get_started_hint" />

            <FrameLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginStart="8dp">

                <com.google.android.material.button.MaterialButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:icon="@drawable/google"
                    android:minHeight="50dp"
                    app:cornerRadius="20dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textAllCaps="false"
                    android:id="@+id/continue_with_google"
                    app:iconGravity="start"
                    android:text="@string/continue_with_google_hint" />

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    app:lottie_rawRes="@raw/loading"
                    android:layout_gravity="center"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    android:id="@+id/loading_anim" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
